--- a/Template/Podfile
+++ b/Template/Podfile
@@ -9,6 +9,16 @@ def shared_pods
     pod 'Kingfisher'
     pod 'MBProgressHUD'
     pod 'SwiftyBeaver'
+    pod 'Disk'
+    pod 'RealmSwift'
+    pod 'SwiftMessages'
+    pod 'Fabric'
+    pod 'Crashlytics'
+    pod 'Firebase/Core'
+    pod 'Firebase/AdMob'
+    pod 'Google-Mobile-Ads-SDK'
+    pod 'Firebase/RemoteConfig'
+    pod 'Firebase/Messaging'
 end
 
 target 'Application' do
